hphp/hack/test/typecheck/inout/bad_inout_use_pipe_var.php.exp
File "bad_inout_use_pipe_var.php", line 9, characters 17-18:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_pipe_var.php", line 9, characters 17-18:
Cannot assign a value to the special pipe variable ($$) (Typing[4176])
